<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/pagp" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/hoteles" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_local_play_black_24dp"
            android:title="@string/sit" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/cerrarSesion" />
    </group>


</menu>
