<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.soulbro.jardin.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="30sp"
            android:text="@string/mensaje"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/powderblue"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/desc1"
                android:textColor="@color/red"/>

            <ImageView
                android:layout_width="217dp"
                android:layout_height="192dp"
                android:src="@drawable/c2"
                android:layout_gravity="center"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/desc2"
                android:textColor="@color/red"/>

            <ImageView
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:src="@drawable/cafe"
                android:layout_gravity="center"
                />




        </LinearLayout>












</LinearLayout>
